--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.0.0-alpha.91",
+    "lucide-react": "^0.446.0",
+    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "postcss": "^8",
